# aics-segmentation

./: .bumpversion.cfg  .gitignore  BUILD.md  Jenkinsfile  README.md  README.rst  build.gradle  demo_NUP153.ipynb  gradle.properties  settings.gradle  setup.cfg  setup.py
aicssegmentation/: __init__.py  pre_processing_utils.py  setting.txt  version.py
aicssegmentation/cli/: objectify.py  (+1 more)
demo_data/: TOMM20_pipeline_example.tiff.REMOVED.git-id  TOMM20_pipeline_example_cell_segmentation.tiff  TOMM20_pipeline_example_nucleus_segmentation.tiff  TOMM20_pipeline_example_structure_segmentation.tiff
docs/: API.md  conda_why.md  full_doc.md  installation_linux.md  installation_mac.md  installation_windows.md  jupyter_lookup_table.md  object_identification.md
lookup_table_demo/: ACTB.ipynb  ACTN1.ipynb  CENT2.ipynb  CTNNB1.ipynb  DSP.ipynb  FBL.ipynb  GJA1.ipynb  LAMP1.ipynb  MYH10.ipynb  NPM.ipynb  RAB5A.ipynb  README.md  SEC61B.ipynb  SLC25A17.ipynb  ST6GAL1.ipynb  TJP1.ipynb  TNNI1_Cardio.ipynb  TOMM20.ipynb  TTN_Cardio.ipynb  TUBA1B.ipynb  Untitled.ipynb  bridging_the_gap_between_binary_image_and_analysis.ipynb  demo_NUP153.ipynb  demo_RAB5.ipynb  demo_TNNI1.ipynb  playground_Nucleophosmin.ipynb  playground_Sec61_dual.ipynb  playground_Sec61b.ipynb  playground_curvi.ipynb  playground_curvi_WorkshopOct2019.ipynb  playground_dots.ipynb  playground_filament3d.ipynb  playground_filaments.ipynb  playground_gja1.ipynb  playground_lamp1.ipynb  playground_npm1.ipynb  playground_nuc.ipynb  playground_shell.ipynb  playground_spotty-Copy1.ipynb  playground_spotty.ipynb  (+5 more)
(+69 files in other folders)
