[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=build/test_report.xml -v
norecursedirs = aicssegmentation/tests/checkouts .egg* build dist venv .gradle aicssegmentation.egg-info/*

[flake8]
max-line-length = 130

[coverage:html]
directory = build/coverage_html
title = Test coverage report for aicssegmentation

[coverage:xml]
output = build/coverage.xml
